--- a/workspaces/server/index.html
+++ b/workspaces/server/index.html
@@ -20,7 +20,7 @@
     <!--    <link rel="preload" crossorigin="anonymous" href="/assets/NotoSansJP-SemiBold.woff" as="font" type="font/woff" />-->
     <!--    <link rel="preload" crossorigin="anonymous" href="/assets/NotoSansJP-Thin.woff" as="font" type="font/woff" />-->
     <link as="image" crossorigin="anonymous" href="/assets/cyber-toon.svg" rel="preload" />
-    <link as="image" crossorigin="anonymous" href="/assets/hero.png" rel="preload" />
+    <link as="image" crossorigin="anonymous" href="/assets/hero.webp" rel="preload" />
     <script id="inject-data" type="application/json"></script>
     <script src="/client.mjs" type="module"></script>
     <style id="tag"></style>
