一旦ビルド通るようになった

--- a/workspaces/client/index.html
+++ b/workspaces/client/index.html
@@ -22,10 +22,10 @@
     <link as="image" href="/assets/cyber-toon.svg" rel="preload" />
     <link as="image"  href="/assets/hero.webp" rel="preload" />
     <script id="inject-data" type="application/json"></script>
-    <script src="/client.mjs" type="module"></script>
     <style id="tag"></style>
   </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="/src/index.tsx"></script>
   </body>
 </html>
