--- a/workspaces/client/index.html
+++ b/workspaces/client/index.html
@@ -19,8 +19,8 @@
     <!--    <link rel="preload" crossorigin="anonymous" href="/assets/NotoSansJP-Regular.woff" as="font" type="font/woff" />-->
     <!--    <link rel="preload" crossorigin="anonymous" href="/assets/NotoSansJP-SemiBold.woff" as="font" type="font/woff" />-->
     <!--    <link rel="preload" crossorigin="anonymous" href="/assets/NotoSansJP-Thin.woff" as="font" type="font/woff" />-->
-    <link as="image" href="/assets/cyber-toon.svg" rel="preload" />
-    <link as="image"  href="/assets/hero.webp" rel="preload" />
+<!--    <link as="image" href="/assets/cyber-toon.svg" rel="preload" />-->
+<!--    <link as="image"  href="/assets/hero.webp" rel="preload" />-->
     <script id="inject-data" type="application/json"></script>
     <style id="tag"></style>
   </head>
